--- a/contacts.html
+++ b/contacts.html
@@ -27,11 +27,11 @@
                 <li><a href="/">О нас</a></li>
                 <li><a href="/">Ремонт</a>
                     <ul class="sub-menu-repair">
-                        <li><a href="/">Apple</a>
+                        <li><a href="repair-apple.html">Apple</a>
                             <ul class="repair-apple">
-                                <li><a href="/">iPhone</a></li>
-                                <li><a href="/">iPad</a></li>
-                                <li><a href="/">Watch</a></li>
+                                <li><a href="repair-apple-iphone.html">iPhone</a></li>
+                                <li><a href="repair-apple-ipad.html">iPad</a></li>
+                                <li><a href="repair-apple-watch.html">Watch</a></li>
                                 <li><a href="/">MacBook</a></li>
                             </ul>
                         </li>
@@ -92,5 +92,47 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer_wrap">
+            <div class="footer_logo">
+                <a href="index.html"><img src="images/apple_jobs_genius.png" alt="" id="footer_logo">
+                </a>
+                <a href="https://www.facebook.com/3aI7agJIucT" target="_blank">
+                    <img src="images/facebook_logo.png" alt="facebook">FaceBook
+                </a>
+                <a href="https://instagram.com/3ai7agjiuct?igshid=l0a75s0nfc8y" target="_blank">
+                    <img src="images/instagram_logo.png" alt="instagram">Instagram
+                </a>
+            </div>
+            <div class="footer_menu">
+                <ul>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="repair-apple.html">Ремонт</a></li>
+                    <li><a href="#">Устройства</a></li>
+                    <li><a href="#">Аксессуары</a></li>
+                    <li><a href="news.html">Новости и акции</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="footer_contacts">
+                <div class="connect">
+                    <!-- <h2><span class="bold">Телефоны:</span></h2> -->
+                    <h3><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</h3>
+                    <h3><img src="images/vodafone_logo.png" alt="vodafone">+38(066)187-80-30</h3>
+                    <!-- <h2><span class="bold">Адрес:</span></h2> -->
+                    <h3>г.Киев, <img src="images/metro1.png" alt="metro" id="metro">Площадь Льва Толстого,</h3><h3> ул. Большая Васильковская 28</h3>
+                    <!-- <h2><span class="bold">E-mail:</span></h2> -->
+                    <h3><img src="images/email.png" alt="email" id="email"><a href="mailto:abbra-cadabra@gmail.com">abbra-cadabra@gmail.com</a></h3>
+                </div>
+                <div class="worktime">
+                    <!-- <h2><span class="bold">График работы:</span></h2> -->
+                    <h3><img src="images/clock3.png" alt="clock_work" id="clock1">Пн-Пт: <span class="bold">10:00-20:00</span></h3>
+                    <h3><img src="images/clock4.png" alt="clock_hol" id="clock2">Сб-Вс: <span class="bold">11:00-19:00</span></h3>
+                </div>
+            </div>
+        </div>
+        <div class="copyright"></div>Copyright © 2012—2020 Apple-Genius. Все права защищены.</div>
+    </footer>
+
 </body>
 </html>
